ksp-bnf-grammar.txt



//*******************************+ KSP BNF ************************

<int> ::= [1-9]+ | "int(" <real> ")"
<real> ::= <int> "." <int> | "real(" <int> ")"
<num> ::= (<int> | <real>)
<binary_op> ::= - | + | mod | / | * | <bitwise_op> | <comparison_op> | <bool_op
<unary_op> ::= not | .not. | -
<linebreak> ::= \n
<assignment> ::= (<variable> | <array>) ":=" (<num> | <string>)
<comparison_op> ::= "=" | "<" | ">" | "<=" | ">=" | "!="
<bool_op> ::= and | or | not
<bitwise_op> ::= .and. | .xor. | .or. | .not.
<string_op> ::= &

//******** FUNCTIONS
<function_header> ::= <keyword> ("(" (<param_list> | <expression) ")")?
<function_definition> ::= "function" <function_header> ("->" <variable>)? ("override")? <linebreak> <statement>* "end function"
<function_call> ::= "call"? <function_header>

//******* MACROS
<macro_header> ::= <keyword> "(" <param_list ")"
<macro_definition> ::= "macro" <macro_header> <linebreak> <statement>* "end macro"
<macro_call> ::= <macro_header>
<macro_iteration> ::= "iterate_macro" "(" <keyword> ")" ":=" <binary_expression> "to" <binary_expression>
<macro_literation> ::= "literate_macro" "(" <keyword> ")" "on" <param_list>

//******* START_INC


//******** DEFINE
<define_statement> ::= "define" <param_list> := <param_list>

<keyword> ::= ([0-9] | [a-z] | [A-Z] | "_")+ | <keyword> "." <keyword>
<string> ::= "\'" <text> "\'"
<variable_identifier> ::= "$" | "~" | "@"
<array_identifier> ::= "!" | "%" | "?"
<identifier> ::= <variable_identifier> | <array_identifier>
<variable> ::= (const | polyphonic)? <identifier>? <keyword>
<array> ::= <variable> [ <binary_expression> (, <binary_expression>)? ]
<param_list> ::= (<expression> ("," <expression>)?)?
<declare_statement> ::= "declare" <param_list> ":="? <param_list>?

<unary_expression> ::= <unary_op> (<num> | <variable> | <function_header>)
<primary_expression> ::= <num> | <variable> | <function_header> | <unary_expression> | "("<binary_expression>")"
<binary_expression> ::= <primary_expression> (<binary_op> <binary_expression>)?
<string_expression> ::= (<string> | <binary_expression>) (<string_op> (<string> | <binary_expression>))?
<expression> ::= <string_expression> | <binary_expression> | <param_list>

// Special cases of expressions for type checking
<condition> ::= <boolean_expression>
<boolean_expression> ::= <comparison_expression> (<bool> <comparison_expression>)?
<comparison_expression> ::= <binary_expression> <comparison_op> <binary_expression>

<assign_statement> ::= <param_list> ":=" <param_list>
<statement> ::= <linebreak>* (<if_statement> | <while_statement> | <for_statement> | <select_statement> | <assign_statement | <funcion_call> ) <linebreak>
<for_statement> ::= for <assign_statement> (to | downto) <binary_expression> <linebreak> <statements> end for <linebreak>
<if_statement> ::= if (? <condition> )? <linebreak> <statements> else? <linebreak> <statements> end if <linebreak>
<while_statement> ::= while (? <condition> )? <linebreak> <statements> end while <linebreak>
<select_statement> ::= select (? <expression> )? <linebreak> (case <expression> <linebreak> <statements>)+ end select <linebreak>
<import> ::= import <string> (as <keyword>)?
<callback_identifier> ::= ("async_complete" | "controller" | "init" |
                          "listener" | "note" | "persistence_changed" | "pgs_changed" | "poly_at" |
                          "release" | "rpn/nrpn" | "ui_control" | "ui_update")
<callback> ::= "on" <callback_identifier> <linebreak> <statement>* "end on"
<programm> ::= ((<callback> | <function_definition> | <macro_definition> | <import>) <linebreak>)*
